# catsify

./: .gitignore  README.md
.github/workflows/: azure-static-web-apps-ambitious-smoke-0c318d403.yml  azure-static-web-apps-lively-ground-0f97a8a1e.yml  azure-static-web-apps-witty-flower-06756bd10.yml
api/: .bazelrc  .funcignore  .gitignore  BUILD.bazel  Cargo.toml  LICENSE  WORKSPACE  local.settings.json  package-lock.json  package.json  tsconfig.json
api/.cargo/: config
api/func/: BUILD.bazel  function.json  index.ts  wasm_loader.ts
api/rust/: BUILD.bazel  lib.rs  test.js
app/: README.md  angular.json  package-lock.json  package.json
app/scripts/: stamp.sh
app/src/: index.html  styles.css
app/src/app/: app.component.ts  app.module.ts  flip-board.component.ts  generator.service.ts  package.json
app/src/environments/: environment.prod.ts  environment.ts
scripts/: api_build_linux.sh  build.linux.sh  oryx_patch.sh  postbuild.linux.sh  prebuild.linux.sh
