load("@npm//@bazel/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "func",
    srcs = ["index.ts"],
    deps = [
        ":func_lib",
        "@npm//@azure/functions",
    ],
)

ts_library(
    name = "func_lib",
    srcs = ["wasm_loader.ts"],
    data = [
        "//rust:catsify_bindgen",
    ],
    deps = [
        "@npm//@types/node",
    ],
)
