load("@npm//@bazel/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "func",
    srcs = ["index.ts"],
    deps = [
        ":func_lib",
        "@npm//@azure/functions",
    ],
)

ts_library(
    name = "func_lib",
    srcs = ["wasm_loader.ts"],
    deps = [
        "//rust:catsify_bindgen",
        "@npm//@types/node",
    ],
)
