package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:rust.bzl", "rust_binary")
load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

# Compile the rust code
rust_binary(
    name = "catsify_bin",
    srcs = ["lib.rs"],
    edition = "2018",
    rustc_flags = [
        "--crate-type=cdylib",
        "--codegen=opt-level=2",
        "--codegen=lto=thin",
        "--codegen=opt-level=z",
        "--codegen=panic=abort",
    ],
    deps = [
        "@rules_rust//wasm_bindgen/raze:wasm_bindgen",
    ],
)

# Generating WebAssembly bindings for //rust:catsify_bin
rust_wasm_bindgen(
    name = "catsify_bindgen",
    bindgen_flags = ["--keep-debug"],
    target = "nodejs",
    wasm_file = ":catsify_bin",
)

nodejs_binary(
    name = "catsify_test",
    args = [
        "--experimental-wasm-modules",
        "--experimental-modules",
    ],
    data = [
        ":catsify_bin",
        ":catsify_bindgen",
    ],
    entry_point = ":test.js",
)
